Tweaked Void Dimension Blocks Added Crafting Recipie For The Void Key

--- a/src/main/resources/assets/picklelords_cool_stuff/lang/en_us.json
+++ b/src/main/resources/assets/picklelords_cool_stuff/lang/en_us.json
@@ -1,3 +1,3 @@
 {
-  "item.picklelords_cool_stuff.void_dimension": "Void Dimension Portal Igniter"
+  "item.picklelords_cool_stuff.void_dimension": "Void Key"
 }
