Added The "Void Highlands" Biome

--- a/src/main/resources/assets/picklelords_cool_stuff/lang/en_us.json
+++ b/src/main/resources/assets/picklelords_cool_stuff/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.picklelords_cool_stuff.void_dimension": "Void Key"
+  "item.picklelords_cool_stuff.void_dimension": "Void Key",
+  "biome.picklelords_cool_stuff.void_highlands": "Void Highlands"
 }
