Added A The Voidic Plains Biome Tweaked Rarity Of the Void Temple

--- a/src/main/resources/assets/picklelords_cool_stuff/lang/en_us.json
+++ b/src/main/resources/assets/picklelords_cool_stuff/lang/en_us.json
@@ -1,4 +1,6 @@
 {
   "item.picklelords_cool_stuff.void_dimension": "Void Key",
-  "biome.picklelords_cool_stuff.void_highlands": "Void Highlands"
+  "biome.picklelords_cool_stuff.void_highlands": "Void Highlands",
+  "biome.picklelords_cool_stuff.voidic_plains": "Voidic Plains",
+  "biome.picklelords_cool_stuff.evil_forest": "Evil Forest"
 }
